# yamig

./: README.md  pyproject.toml
src/yamig/core/: mlog.py  preprocessor.py  quadtree.py
src/yamig/scripts/: cli.py
