[project]
name = "yamig"
version = "0.1.0"
description = "yet another mindustry image generator"
authors = [
    { name = "wandderq", email = "wanddr.qq@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "scipy>=1.17.1",
]

[project.scripts]
yamig = "yamig.scripts.cli:run_cli"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"
